# 2025_Sejong_Univ_Hackerton

./: .gitignore  readme.md
backend/: pyproject.toml  requirements.txt
backend/OpenRouter/: apps.py  urls.py  views.py
backend/OpenRouter/src/: run_test.py
backend/OpenRouter/src/integrations/: openrouter_client.py
backend/OpenRouter/src/tasks/: langchain_agent.py  session_store.py
backend/OpenRouter/src/utils/: session.py
backend/OpenRouter/src/workflows/: prompts.py  recommender.py  workflow.py
backend/backend/: run_test.py  settings.py  urls.py
backend/backend/apps/integrations/: openai_client.py  openrouter_client.py
backend/backend/apps/tasks/: langchain_agent.py  models.py  views.py
backend/backend/apps/workflows/: prompts.py  recommender.py  workflow.py
backend/core/: models.py  serializers.py  views.py
backend/core/migrations/: 0001_initial.py
backend/docs/: api.md  models.md
backend/user/: admin.py  models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py
frontend/: README.md
frontend/src/: App.jsx  main.jsx
frontend/src/api/: chatService.js
frontend/src/app/providers/: AuthProvider.jsx
frontend/src/app/routes/: ProtectedRoute.jsx
frontend/src/features/auth/: authApi.js  authStorage.js
frontend/src/features/chat/: openRouterApi.js  openRouterKeyStorage.js
frontend/src/layouts/AppShell/: AppShell.jsx  AppShell.module.css
frontend/src/pages/Chat/: ChatPage.jsx  ChatPage.module.css
frontend/src/pages/Login/: LoginPage.jsx  LoginPage.module.css
frontend/src/pages/ProfilePage/: ProfilePage.jsx  ProfilePage.module.css
frontend/src/pages/Register/: RegisterPage.jsx  RegisterPage.module.css
frontend/src/shared/api/: http.js
(+10 files in other folders)
