[project]
name = "hackerton-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "HyeonsuRyu",email = "hsoo112149@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.*"
dependencies = [
    "django (==5.1.3)",
    "djangorestframework (>=3.16.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
