[project]
name = "hackerton-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "HyeonsuRyu",email = "hsoo112149@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "django (>=5.1,<6.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "langchain-core (>=1.2.5,<2.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
